<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="viewStart"
    tools:context=".presentation.MainActivity">

    <RatingBar
        android:id="@+id/ratingBar2"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_medium"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="4"
        android:stepSize="0.1"
        android:theme="@style/RatingBar"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


    <EditText
        android:id="@+id/editTextCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/poppins_medium"
        android:hint="Enter Date"
        android:inputType="date"
        android:longClickable="true"
        android:textColorHighlight="#1980FC"
        android:textColorLink="#1980FC"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectedDate" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="334dp"
        android:layout_height="254dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <ImageView
            android:id="@+id/imageViewMovieImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/avengers_poster"
            tools:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivPin"
        android:layout_width="24dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/pin" />

    <TextView
        android:id="@+id/textViewTheatre"
        android:layout_width="245dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="192dp"
        android:fontFamily="@font/poppins_medium"
        android:text="SilverCity St. Vital Cinemas"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Avengers "
        android:textAlignment="center"
        android:textColor="#263238"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewTheatre" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="580dp" />

    <Button
        android:id="@+id/buttonOrderTickets"
        android:layout_width="217dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:enabled="false"
        android:text="Order tickets? "
        android:textAlignment="center"
        app:backgroundTint="#1980FC"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalPrice" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo vel orci porta non pulvinar neque laoreet. Fermentum leo vel orci porta non pulvinar. Dictum non consectetur a erat nam at lectus. Neque aliquam vestibulum morbi blandit."
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <LinearLayout
        android:id="@+id/toggleButtons"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:showDividers="none"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewShowings" />

    <TextView
        android:id="@+id/textViewShowings"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Showings"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/editTextCalender" />

    <TextView
        android:id="@+id/textViewSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Selected Date: "
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

    <EditText
        android:id="@+id/editTextNumberofTickets"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_border_off"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:inputType="numberPassword"
        android:digits="0123456789"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toEndOf="@+id/textViewNumOfTickets"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtons" />

    <TextView
        android:id="@+id/textViewNumOfTickets"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Number of Tickets: \n Max 10 Tickets"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/toggleButtons" />

    <TextView
        android:id="@+id/textViewNumOfTickets2"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Max 10 tickets"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberofTickets"
        app:layout_constraintStart_toStartOf="@+id/textViewNumOfTickets"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumOfTickets" />

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Total Price: "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.002"
        app:layout_constraintStart_toStartOf="@+id/textViewNumOfTickets"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumOfTickets" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_border_off"
        android:clickable="false"
        android:editable="false"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:inputType="none"
        android:text="$0"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberofTickets"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberofTickets"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberofTickets" />

</androidx.constraintlayout.widget.ConstraintLayout>